# VR_Software

./: .gitignore  README.md  learning_app.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
config/: dataset_manifest.example.csv  learning_content.json  learning_quiz.json  public_datasets.json  receiver.example.json  speech.example.json
docs/: COGNIVERSE_BRIDGE.md  PUBLIC_DATASET_WORKFLOW.md  SIMULATION_MODE.md
raspberry-pi/: README.md  adaptive-vr-lower-face.service  adaptive-vr-receiver.service  lower_face_node.py
scripts/: build_project_handoff_pdf.py  calibration_status.ps1  check_microphone.ps1  configure_pi_usb_adapter.ps1  decompress_raspberry_pi_image.py  download_calibration_session.ps1  fine_tune_headset_cnns.ps1  generate_local_https_cert.py  inject_raspberry_pi_fblock.ps1  inject_raspberry_pi_force_vivo.ps1  inject_raspberry_pi_full_provisioning.ps1  inject_raspberry_pi_official_usb_gadget.ps1  inject_raspberry_pi_usb_gadget.ps1  inspect_quiz_docx.py  list_microphones.ps1  mount_verified_pi_boot.ps1  prepare_downloaded_fer2013.ps1  prepare_fer2013.ps1  repair_pi_key_acl.ps1  run_demo.ps1  run_simulation.ps1  set_calibration_label.ps1  setup_host.ps1  show_connection_info.ps1  start_calibration_session.ps1  start_dashboard.ps1  start_receiver.ps1  start_speech_auto.ps1  start_speech_confusion.ps1  start_speech_english.ps1  start_speech_hindi.ps1  start_speech_quiz.ps1  stop_calibration_session.ps1  train_compact_cnns.ps1  train_public_baselines.ps1  upload_upper_camera.ps1  write_raspberry_pi_sd_buffered.ps1
tests/: test_buffer.py  (+21 more)
(+42 files in other folders)
